--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="container">
-    <button>Login</button>
-    <button>Sign Up</button>
+    <a href = "login.html"><button>Login</button></a>
+    <a href = "signup.html"> <button>Sign Up</button></a>
 </div>
 
 <div class="emblem">
