Linking and Creating general asked question page

--- a/general questions.html
+++ b/general questions.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genreral Questions</title>
     <link rel = "icon" type = "image/png" href = "logo.png">
     <link rel = "stylesheet" type = "text/css" href = "style.css">
-    <link rel = "stylesheet" href = "genesis.css">
+    <link rel = "stylesheet" type="text/css" href = "genesis.css">
 </head>
 <body>
+<div class="container">
+    <a href = "login.html"><button>Login</button></a>
+    <a href = "signup.html"> <button>Sign Up</button></a>
+</div>
+
 <div class="emblem">
     <img src="emblem.png" alt="">
     <div class="emblem-text">
@@ -15,14 +21,12 @@
     </div>
 </div>
 
- <br/><br/>
 <div class="general">
-    <h1>General Questions</h1>
-</div>
-<br/><br/>
-<details>
-    <summary>How a Citizen can Apply for Services?</summary>
 
+    <h2>Frequently Asked Questions</h2>
+
+<details>
+    <summary>1.How a Citizen can Apply for Services?</summary>
     <div class="general-questions">
         A citizen can apply for a Service through following ways:<br/>
         1. Online: A citizen can apply for a service of his/her state via online with or without registration as per the service definition.<br/>
@@ -30,11 +34,9 @@
         3. In person: A citizen can also apply for a service either by downloading application form online and submit it at the concerned office or can take the application form directly from the office.
 
     </div>
-</details>
-
-<br/><br/>
+    </details>
 <details>
-    <summary>How can I register my DSC?</summary>
+    <summary>2.How can I register my DSC?</summary>
     <div class="general-questions">
         Following are the instructions to use DSC:<br/>
         1.Download the respective Driver of your Digital Signature Card.<br/>
@@ -43,5 +45,6 @@
         5.After login (Officials Only) --> Click on DSC Management --> Click on register your DSC.
     </div>
 </details>
+</div>
 </body>
 </html>
