--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         <p>JharSewa</p>
     </div>
 </div>
-
-<br/><br/>
-
 <div class="navbar">
 
     <div class = "dropdown">
@@ -63,7 +60,7 @@
     <div class="dropdown">
         <button class = "dropbtn" >FAQS</button>
         <div class="dropdown-content">
-            <a href="#">General Questions</a>
+            <a href="general%20questions.html">General Questions</a>
             <a href="#">Application Process</a>
             <a href="#">Technical Issues</a>
         </div>
