--- a/general questions.html
+++ b/general questions.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General Questions</title>
-    <link rel = "icon" type = "image/png" href = "logo.png">
+    <link rel = "icon" type = "image/x-icon" href = "emblem.png">
     <link rel = "stylesheet" type = "text/css" href = "CSS/style.css">
     <link rel = "stylesheet" type="text/css" href = "CSS/genesis.css">
 </head>
 <body>
 <div class="container">
-    <a href = "auth.html"><button>Login</button></a>
-    <a href = "signup.html"> <button>Sign Up</button></a>
-</div>
-
-<div class="emblem">
-    <img src="emblem.png" alt="">
-    <div class="emblem-text">
-        <p>JharSewa</p>
+    <div class="emblem">
+        <img src="emblem.png" alt="">
+        <div class="emblem-text">
+            <p>JharSewa</p>
+        </div>
+    </div>
+    <div class="buttons">
+        <a href = "auth.html#login" style="color: #04AA6D"><button>Login</button></a>
+        <a href = "auth.html#signup" style="color: #04AA6D"> <button>Sign Up</button></a>
     </div>
 </div>
 
