--- a/application status.html
+++ b/application status.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Application Status</title>
+    <link rel = "icon" type = "image/png" href = "emblem.png">
     <link href="CSS/applicators.css" rel="stylesheet" type="text/css">
     <link href="CSS/style.css" rel="stylesheet" type="text/css">
 </head>
