--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Jharkhand-22</title>
-    <link rel = "icon" type = "image/png" href = "logo.png">
+    <link rel = "icon" type = "image/x-icon" href = "emblem.png">
     <link rel = "stylesheet" type = "text/css" href = "CSS/style.css">
 </head>
 <body>
 <div class="container">
-    <a href = "auth.html#login"><button>Login</button></a>
-    <a href = "auth.html#signup"> <button>Sign Up</button></a>
-</div>
-
-<div class="emblem">
-    <img src="emblem.png" alt="">
-    <div class="emblem-text">
-        <p>JharSewa</p>
+    <div class="emblem">
+        <img src="emblem.png" alt="">
+        <div class="emblem-text">
+            <p>JharSewa</p>
+        </div>
+    </div>
+    <div class="buttons">
+    <a href = "auth.html#login" style="color: #04AA6D"><button>Login</button></a>
+    <a href = "auth.html#signup" style="color: #04AA6D"> <button>Sign Up</button></a>
     </div>
 </div>
 <div class="navbar">
