Updating CSS file

--- a/application status.html
+++ b/application status.html
@@ -2,12 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application Status</title>
     <link rel = "icon" type = "image/png" href = "emblem.png">
     <link href="CSS/applicators.css" rel="stylesheet" type="text/css">
-    <link href="CSS/style.css" rel="stylesheet" type="text/css">
+    <link href="CSS/auth.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<!-- Header -->
+<header class="page-header">
+    <div class="header-left">
+        <img src="emblem.png" alt="Logo" class="logo">
+    </div>
+    <div class="header-right">
+        <h2>JharSewa</h2>
+    </div>
+</header>
+
+<div class="page-container">
+    <h2>Know Your Application Status</h2>
+</div>
      <form>
          <lebel for ="application status">Through OTP/Application Details</lebel>
          <label for="application status"></label><select name = "application status" id = "application status">
