--- a/auth.html
+++ b/auth.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login Page</title>
+    <title>Login & Sign Up Page</title>
     <link rel = "icon" type = "image/x-icon" href = "emblem.png">
     <link rel = "stylesheet" type = "text/css" href = "CSS/auth.css">
 
