--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
     </div>
     <div class="buttons">
-    <a href = "auth.html#login" style="color: #04AA6D"><button>Login</button></a>
-    <a href = "auth.html#signup" style="color: #04AA6D"> <button>Sign Up</button></a>
+    <a href = "auth.html#login"><button>Login</button></a>
+    <a href = "auth.html#signup"> <button>Sign Up</button></a>
     </div>
 </div>
 <div class="navbar">
@@ -53,7 +53,7 @@
     <div class="dropdown">
         <button  class = "dropbtn" >Support</button>
         <div class="dropdown-content">
-            <a href="#">Contact Us</a>
+            <a href="#contact">Contact Us</a>
             <a href="Jharkhand-edistrict-support.pdf">District Wise Support</a>
             <a href="#">Help Desk</a>
         </div>
@@ -109,7 +109,7 @@
             <p>Latest News</p>
             <p>Announcements</p>
         </div>
-        <div class="column">
+        <div id ="contact" class="column">
             <strong>Contact Us</strong>
             <p>Email:<a href ="mailto:support.edistrict@jharkhandmail.gov.in" style ="color: #ffffff">support.edistrict@jharkhandmail.gov.in</a></p>
             <p>Phone: +91 651-2401581</p>
