Adding new feature of news and Department Quick links

--- a/gov.html
+++ b/gov.html
@@ -285,7 +285,88 @@
          </div>
      </div>
 
-<!-- -->
+<!--Recent News Updates-->
+<div class = "update-quick-links">
 
+     <div class ="box news-update">
+         <h2>Recent News Updates</h2>
+         <div class ="news-card">
+             <div class ="news-meta">
+                 <span class ="time">2 hours ago</span>
+                 <span class ="news-type">Breaking</span>
+             </div>
+             <h3>New Employment Exchange Centers Opened</h3>
+             <p>Five new employment exchange centers inaugurated across rural districts to enhance job placement services. </p>
+         </div>
+
+         <div class ="news-card">
+             <div class ="news-meta">
+                 <span class ="time">5 hours ago</span>
+             </div>
+             <h3>Digital Literacy Program Launch </h3>
+             <p>State-wide digital literacy program launched to train 1 Lakh citizens in basic computer skills and online services.   </p>
+         </div>
+
+         <div class ="news-card">
+             <div class ="news-meta">
+                 <span class ="time">1 day ago</span>
+             </div>
+             <h3>Healthcare Infrastructure Development</h3>
+             <p>₹500 crore allocated for upgrading primary health centers and establishing new medical facilities in remote areas. </p>
+         </div>
+
+         <button class ="news-btn">View All News</button>
+     </div>
+
+
+    <!-- Department Quick Links -->
+
+    <div class ="box department-quick-links">
+
+        <h2>Department Quick Links</h2>
+
+        <div class ="department-quick-links-card">
+            <h4>Revenue</h4>
+            <p>Property,Taxation,Land records</p>
+            <button>Access </button>
+        </div>
+
+        <div class ="department-quick-links-card">
+
+            <h4>Social welfare</h4>
+            <p>Pension, disability services</p>
+            <button>Access </button>
+        </div>
+
+        <div class ="department-quick-links-card">
+
+            <h4>Education</h4>
+            <p>Schools, scholarships, certificates</p>
+            <button>Access </button>
+        </div>
+
+        <div class ="department-quick-links-card">
+
+            <h4>Health</h4>
+            <p>Medical services, health cards</p>
+            <button>Access </button>
+        </div>
+
+        <div class ="department-quick-links-card">
+
+            <h4>Agriculture</h4>
+            <p>Farming support, subsidies</p>
+            <button>Access </button>
+        </div>
+
+        <div class ="department-quick-links-card">
+
+            <h4>Employment</h4>
+            <p>Jobs,Skill development</p>
+            <button>Access </button>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
