Adding Help and Support Section

--- a/gov.html
+++ b/gov.html
@@ -286,6 +286,7 @@
      </div>
 
 <!--Recent News Updates-->
+
 <div class = "update-quick-links">
 
      <div class ="box news-update">
@@ -323,50 +324,110 @@
 
     <div class ="box department-quick-links">
 
-        <h2>Department Quick Links</h2>
+            <h2>Department Quick Links</h2>
 
-        <div class ="department-quick-links-card">
-            <h4>Revenue</h4>
-            <p>Property,Taxation,Land records</p>
-            <button>Access </button>
-        </div>
+        <div class ="department-quick-links-grid">
 
-        <div class ="department-quick-links-card">
+                <div class ="department-quick-links-card">
+                    <h4>Revenue</h4>
+                    <p>Property,Taxation,Land records</p>
+                    <button>Access </button>
+                </div>
 
-            <h4>Social welfare</h4>
-            <p>Pension, disability services</p>
-            <button>Access </button>
-        </div>
+                <div class ="department-quick-links-card">
 
-        <div class ="department-quick-links-card">
+                    <h4>Social welfare</h4>
+                    <p>Pension, disability services</p>
+                    <button>Access </button>
+                </div>
 
-            <h4>Education</h4>
-            <p>Schools, scholarships, certificates</p>
-            <button>Access </button>
-        </div>
+                <div class ="department-quick-links-card">
 
-        <div class ="department-quick-links-card">
+                    <h4>Education</h4>
+                    <p>Schools, scholarships, certificates</p>
+                    <button>Access </button>
+                </div>
 
-            <h4>Health</h4>
-            <p>Medical services, health cards</p>
-            <button>Access </button>
-        </div>
+                <div class ="department-quick-links-card">
 
-        <div class ="department-quick-links-card">
+                    <h4>Health</h4>
+                    <p>Medical services, health cards</p>
+                    <button>Access </button>
+                </div>
 
-            <h4>Agriculture</h4>
-            <p>Farming support, subsidies</p>
-            <button>Access </button>
-        </div>
+                <div class ="department-quick-links-card">
 
-        <div class ="department-quick-links-card">
+                    <h4>Agriculture</h4>
+                    <p>Farming support, subsidies</p>
+                    <button>Access </button>
+                </div>
 
-            <h4>Employment</h4>
-            <p>Jobs,Skill development</p>
-            <button>Access </button>
+                <div class ="department-quick-links-card">
+
+                    <h4>Employment</h4>
+                    <p>Jobs,Skill development</p>
+                    <button>Access </button>
+             </div>
         </div>
     </div>
-
 </div>
+
+<!-- Portal Statistics -->
+
+<section class ="statistics">
+    <h2>Portal Statistics</h2>
+    <p>Realtime data showcasing our digital governance impact.</p>
+
+    <div class = "statistics-grid">
+                <div class ="statistics-card">
+                    <span class ="stats-time">2.5+</span>
+                    <span class ="stats-type">Registered Users</span>
+                </div>
+
+                <div class ="statistics-card">
+                    <span class ="stats-time">45,672</span>
+                    <span class ="stats-type">Services This Month</span>
+                </div>
+
+                <div class ="statistics-card">
+                    <span  class ="stats-time">8.5</span>
+                    <span class ="stats-type">Avg. Response Time (days)</span>
+                </div>
+
+                <div class ="statistics-card">
+                    <span  class ="stats-time">96%</span>
+                    <span class ="stats-type">Citizen Satisfaction</span>
+                </div>
+    </div>
+</section>
+
+<section class ="support-help-section">
+    <h2>Support & Help Center</h2>
+    <p>Get assistance with your application and services through our comprehensive support channels.</p>
+
+    <div class ="support-help-grid">
+        <div class ="support-card">
+            <h4>24/7 Helpline</h4>
+            <p>Call our support center for immediate assistance.</p>
+            <h4>+91-651-2446751</h4>
+            <p>Available 24 hours</p>
+        </div>
+
+        <div class ="support-card">
+            <h4>24/7 Helpline</h4>
+            <p>Call our support center for immediate assistance.</p>
+            <h4>+91-651-2446751</h4>
+            <p>Available 24 hours</p>
+        </div>
+
+        <div class ="support-card">
+            <h4>24/7 Helpline</h4>
+            <p>Call our support center for immediate assistance.</p>
+            <h4>+91-651-2446751</h4>
+            <p>Available 24 hours</p>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
