Making footer section and add some features in portal statistics

--- a/gov.html
+++ b/gov.html
@@ -13,8 +13,7 @@
     <div class="logo">
 
         <img src="/assets/emblem.png" alt="" class="logo-img">
-        <div class="logo-text">
-        </div>
+
         <div class="logo-text"> Jharkhand Government
             <span>Digital Services Portal</span>
          </div>
@@ -380,21 +379,25 @@
 
     <div class = "statistics-grid">
                 <div class ="statistics-card">
+                    <div class="stats-icon"><i class="fa-solid fa-users"></i></div>
                     <span class ="stats-time">2.5+</span>
                     <span class ="stats-type">Registered Users</span>
                 </div>
 
                 <div class ="statistics-card">
+                    <div class="stats-icon"><i class="fa-solid fa-file-invoice"></i></div>
                     <span class ="stats-time">45,672</span>
                     <span class ="stats-type">Services This Month</span>
                 </div>
 
                 <div class ="statistics-card">
+                    <div class="stats-icon"><i class="fa-solid fa-clock"></i></div>
                     <span  class ="stats-time">8.5</span>
                     <span class ="stats-type">Avg. Response Time (days)</span>
                 </div>
 
                 <div class ="statistics-card">
+                    <div class="stats-icon"><i class="fa-solid fa-star"></i></div>
                     <span  class ="stats-time">96%</span>
                     <span class ="stats-type">Citizen Satisfaction</span>
                 </div>
@@ -407,6 +410,9 @@
 
     <div class ="support-help-grid">
         <div class ="support-card">
+            <div class="support-icon-circle">
+                <i class="fa-solid fa-phone"></i>
+            </div>
             <h4>24/7 Helpline</h4>
             <p>Call our support center for immediate assistance.</p>
             <h4>+91-651-2446751</h4>
@@ -414,20 +420,87 @@
         </div>
 
         <div class ="support-card">
-            <h4>24/7 Helpline</h4>
-            <p>Call our support center for immediate assistance.</p>
-            <h4>+91-651-2446751</h4>
-            <p>Available 24 hours</p>
+            <div class="support-icon-circle">
+                <i class="fa-solid fa-envelope"></i>
+            </div>
+            <h4>Email Support</h4>
+            <p> Send us your queries and get detailed responses.</p>
+            <h4>support@jharsewa.gov.in</h4>
+            <p>Responses within 24 hours</p>
         </div>
 
         <div class ="support-card">
-            <h4>24/7 Helpline</h4>
-            <p>Call our support center for immediate assistance.</p>
-            <h4>+91-651-2446751</h4>
-            <p>Available 24 hours</p>
+            <div class="support-icon-circle">
+                <i class="fa-solid fa-comments"></i>
+            </div>
+            <h4>Live Chat</h4>
+            <p> Chat with our support agents in real-time.</p>
+             <button class ="chat-btn">Start Chat</button>
         </div>
     </div>
 </section>
+
+<footer>
+
+    <div class ="footer-grid">
+        <div class ="footer-grid-card">
+            <div class="footer-logo">
+
+                <img src="/assets/emblem.png" alt="" class="logo-img">
+
+                <div class="footer-text"> Jharkhand Government
+                    <span>Digital Services Portal</span>
+                </div>
+            </div>
+
+            <p>Empowering citizens through digital governance and accessible government services for a better tomorrow.</p>
+
+        </div>
+
+        <div class ="footer-grid-card">
+            <p>Quick Links</p>
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Services</li>
+                <li>Contact</li>
+                <li>Support</li>
+            </ul>
+        </div>
+
+        <div class ="footer-grid-card">
+            <p>Services</p>
+            <ul>
+                <li>Certificates</li>
+                <li>Social Security</li>
+                <li>Revenue Services</li>
+                <li>Education</li>
+                <li>Employment</li>
+            </ul>
+        </div>
+
+        <div class ="footer-grid-card">
+            <p>Contact Info</p>
+            <ul>
+                <li><i class="fa-solid fa-phone"></i>+91-651-2446751</li>
+                <li><i class="fa-solid fa-envelope"></i>support@jharsewa.jharkhand.gov.in</li>
+                <li><i class="fa-solid fa-location-dot"></i>Ranchi,Jharkhand,India</li>
+            </ul>
+
+        </div>
+    </div>
+
+    <hr>
+
+    <div class ="copyright">
+        <p>&copy;2025 Government of Jharkhand. All rights reserved.</p>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Service</a>
+        <a href="#">Accessibility</a>
+    </div>
+
+</footer>
+
 
 </body>
 </html>
